<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Poster Banao</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="sticker_directory" translatable="false">.Thumbnail Design Stickers/category1</string>
    <string name="invitaition_directory" translatable="false">.Invitation Stickers/category1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="there_is_no_data_so">There is no data</string>
    <string name="no_item_found">No item found !</string>
    <string name="login_in">Login</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="login_cancel">Login cancel</string>
    <string name="login_error">Login error</string>
    <string name="authentication_failed">Authentication faild</string>
    <string name="tap_to_view_more_content">Tap to view more posters</string>
    <string name="newest">Newest</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Your Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="company">Company</string>
    <string name="facebook_page">FB Page Name</string>
    <string name="insta_username">Insta Username</string>
    <string name="cancel_">Cancel</string>
    <string name="permission">Permission</string>
    <string name="permission_alert">Permission alert !</string>
    <string name="settings">Settings</string>
    <string name="we_need_storage_and_camera_permission_for_upload_profile_pic">We need external storage and camera permission for upload verification picture.</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">From Gallery</string>
    <string name="add_photo_">Add Photo</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_email">Enter email</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="search_">Search</string>
    <string name="discover_more">Discover More</string>
    <string name="festival_category">Festival Category</string>
    <string name="bussiness_category">Business Category</string>
    <string name="search_your_query">Search your query</string>
    <string name="my_post">My Post</string>
    <string name="share_us">Share Us</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_service"><![CDATA[Terms & Service]]></string>
    <string name="log_out">Log Out</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="hindi">Hindi</string>
    <string name="label_brush">Draw</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Stickers</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="label_frame">Frame</string>
    <string name="label_photo_mode">Add Photo</string>
    <string name="next">Next</string>
    <string name="magic">Magic</string>
    <string name="zoom_in_out">Zoom in Out</string>
    <string name="remove_background">Remove BG</string>
    <string name="manual">Manual</string>
    <string name="label_draw">Draw</string>
    <string name="saved">Saved</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="more">More</string>
    <string name="facebook">Facebook</string>
    <string name="made_in_india_with_love">Made in india with ❤</string>
    <string name="your_photo_are_ready_to_share">Your Photo is ready to share.</string>
    <string name="premium">Premium</string>
    <string name="one_month">1 Month</string>
    <string name="unlimited_posts">Unlimited Posts</string>
    <string name="premium_posts">Premium Posts</string>
    <string name="no_ads">No Ads</string>
    <string name="high_qwality_post">High-quality posts</string>
    <string name="unlimited_stickers">Unlimited Stickers</string>
    <string name="three_month">3 Month</string>
    <string name="one_year">1 Year</string>
    <string name="subscription_activated">Premium Activated</string>
    <string name="access_to_all_posts_and_premium_posts_with_no_ads_n_and_save_posts_with_high_quality">Access to all posts and Premium Posts with no ads and save posts with high quality.</string>
    <string name="account_blocked">Account Blocked</string>
    <string name="hello">Hello !</string>
    <string name="you_are_welcome">You are welcome</string>
    <string name="your_all_saved_post">Your all saved post.</string>
    <string name="please_share_your_experience">Please share your experience.</string>
    <string name="read_our_privacy_policy">Read our privacy policy.</string>
    <string name="please_accept_our_terms">Please accept our terms.</string>
    <string name="payment">payment</string>
    <string name="create">Create More</string>
    <string name="custome">Custom</string>
    <string name="greeting_poster">Greeting Poster</string>
    <string name="personal_details">Personal Details</string>
    <string name="bussiness_details">Business Details</string>
    <string name="social_details">Social Details</string>
    <string name="bussiness_name">Business Name</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="select_image">Select Image</string>
    <string name="add_greeting_photo">Add Greeting Photo</string>
    <string name="change_name">Change Name</string>
    <string name="change_bussiness">Change Business</string>
    <string name="change">Change</string>
    <string name="submit">Submit</string>
    <string name="please_fill_field">Please fill input Field</string>
    <string name="app_update">App Update !</string>
    <string name="please_update_app">Please update app for new features.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="currency">₹</string>
    <string name="flexible">Flexible</string>
    <string name="plans">Plans</string>
    <string name="months">Months</string>
    <string name="payment_cencelled">Payment Cancelled</string>
    <string name="use_all_premium">Use All Premium Stickers</string>
    <string name="use_all_premium_frame">Use All Premium Frames</string>
    <string name="add_business">Add Business</string>
    <string name="add_bussiness">Add New Business</string>
    <string name="bussiness_logo">Business Logo</string>
    <string name="bussiness_number">Business Number</string>
    <string name="Youtube_channel_name">Youtube Channel Name</string>
    <string name="instagrame_username">Instagram Username</string>
    <string name="enter_bussiness_name">Please enter business name</string>
    <string name="edit_bussiness">Edit Business</string>
    <string name="my_bussiness">My Business</string>
    <string name="add_new">Add New</string>
    <string name="your_all_added_bussiness">Your all added business</string>
    <string name="please_select_bussiness_logo">Please select business logo</string>
    <string name="skip">Skip</string>
    <string name="select_yourlanguage">Select Your Language</string>
    <string name="make_brand">Make Brand</string>
    <string name="best_and_easy_way_to_make_your_business_posters_like_a_brand">Best and easy way to make your business posts like a brand.</string>
    <string name="best_way_to_wish_your_customers_and_clients_on_behalf_of_your_business_by_making_a_festival_poster">Best way to wish your customers and clients on behalf of your business by making a festival posts</string>
    <string name="login_in_to_continue">Log in to continue</string>
    <string name="bussiness_email">Business Email</string>
    <string name="enter_bussiness_email">Please enter business email</string>
    <string name="demo_number">1234567890</string>
    <string name="demo_name">Vikaram Sara Bhai</string>
    <string name="demo_email">demoemail@gmail.com</string>
    <string name="demo_insta">vistic</string>
    <string name="demo_address">Madhya Pradesh (India)</string>
    <string name="upcoming_festivals">Upcoming Days &amp; Festivals</string>
    <string name="choose_a_plan_that_best_for_you">Choose a plan that best for you</string>
    <string name="contact_number">Contact Number</string>
    <string name="message">Message</string>
    <string name="contact">Contact</string>
    <string name="please_enter_currect_number">Please enter correct number</string>
    <string name="message_is_very_short">Message is very short</string>
    <string name="submit_success">Submit Successfully</string>
    <string name="share_to_your_freinds_and_family">Share to your freinds and family</string>
    <string name="choose_plan">Choose plan</string>
    <string name="what_do_you_want_search_now">What do you want search now</string>
    <string name="please_select_bussiness">Please select business</string>
    <string name="political">Political</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="rahul_gandhi">Rahul Gandhi</string>
    <string name="bheem_army">Bheem Army</string>
    <string name="healine">Edit this text</string>
    <string name="label_border">Border</string>
    <string name="bussiness">Business</string>
    <string name="golden">Golden</string>
    <string name="electronics">Electronics</string>
    <string name="alert">Alert</string>
    <string name="suggestion">Suggestion</string>
    <string name="ok">Ok</string>
    <string name="add_bussiness_hint">You can put information about any item of your business or shop here, the information put here will be shown in your banner, post!</string>
    <string name="person">Personal</string>
    <string name="call_to_find_out_more">Call to find out more</string>
    <string name="videos">Videos</string>
    <string name="creating_video">Creating video</string>
    <string name="please_wait">Please wait</string>
    <string name="select_shape">Select Shape</string>
    <string name="normal">Normal</string>
    <string name="diamond">Diamond</string>
    <string name="square">Square</string>
    <string name="style_image">Style Image</string>
    <string name="try_again">Try Again</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="processing">Processing..</string>
    <string name="withdraw">Withdraw</string>
    <string name="no_user_found">No user found</string>
    <string name="current_balance">Current Balance</string>
    <string name="total_earning">Total Earning</string>
    <string name="total_withdraw">Total Withdraw</string>
    <string name="withdraw_histri">Withdraw Histri</string>
    <string name="amount">Amount</string>
    <string name="Date">Date</string>
    <string name="status">Status</string>
    <string name="error">Error</string>
    <string name="upi_id">Upi ID</string>
    <string name="wallet_transactions">Wallet Transaction</string>
    <string name="type">Type</string>
</resources>