<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ContactFragment">
    <RelativeLayout
        android:background="@color/app_color"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_btn"
            android:text="@string/contact"
            android:textColor="@color/white"
            android:textSize="16dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit_btn"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/number_et"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_13sdp"
                android:background="@drawable/btn"
                android:backgroundTint="@color/editor_controller_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/demo_number"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="16dp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/message"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/message_et"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_13sdp"
                android:background="@drawable/btn"
                android:backgroundTint="@color/editor_controller_bg"
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_150sdp"
                android:layout_centerVertical="true"
                android:hint="@string/message"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="16dp" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/btn"
        android:gravity="center"
        android:onClick="submit"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18dp"/>

</RelativeLayout>